--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.1"
+    "@material-ui/core": "3.8.2",
+    "classnames": "^2.2.6",
+    "moment": "^2.23.0",
+    "prop-types": "^15.6.2",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
+    "react-icons": "3.2.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
