--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "2.1.1",
     "react-select": "^2.2.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
