--- a/app/package.json
+++ b/app/package.json
@@ -4,20 +4,19 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "3.8.2",
-    "axios": "^0.18.0",
-    "classnames": "^2.2.6",
-    "lodash": "^4.17.11",
-    "moment": "^2.23.0",
-    "prop-types": "^15.6.2",
+    "axios": "0.18.0",
+    "classnames": "2.2.6",
+    "lodash": "4.17.11",
+    "moment": "2.23.0",
+    "prop-types": "15.6.2",
     "react": "16.7.0",
     "react-dom": "16.7.0",
     "react-icons": "3.2.2",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
+    "react-redux": "6.0.0",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.1",
-    "react-select": "^2.2.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
